<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="totalPrice"
            type="Double" />

        <variable
            name="totalItemCount"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBGColor"
        tools:context=".ui.fragment.view.BagFrgment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box_darker_gray_18"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_chevron_left_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/openBagIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/bag"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bagRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@id/bottomLL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarCL"
            tools:listitem="@layout/item_product_of_bag" />

        <LinearLayout
            android:id="@+id/bottomLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/box_white_20"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/total_item_count"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@{totalItemCount.toString()}"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/total_amount"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@{totalPrice.toString()}"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/checkoutB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/box_darker_gray_18"
                android:paddingVertical="16dp"
                android:text="@string/check_out" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>