<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.view.ProductDetailFragment">

    <data>

        <import type="com.ahmetfarukeken.ecommerceapp.model.Product" />

        <variable
            name="data"
            type="Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBGColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box_darker_gray_18"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_chevron_left_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{data.name}"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Coat" />

            <ImageButton
                android:id="@+id/likeIB"
                setFavIcon="@{data.liked}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/box_white_20"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black"
                tools:src="@drawable/ic_favorite_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box_white_20"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarCL">

            <ImageView
                setImage="@{data.image_name}"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                tools:src="@drawable/long_coat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/price"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@{data.price + ` ` + data.currency}"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/category"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@{data.category}"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/color"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@{data.color}"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/addToBagB"
                isAddedToBag="@{data.addedToBag}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_darker_gray_18"
                android:paddingVertical="16dp"
                android:text="Sepete Ekle"
                app:layout_constraintTop_toBottomOf="@id/productPriceWithCurrency" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>